# get_MNV

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  build_get_mnv.sh  get_mnv.py  new_get_mnv.py  run_example_with_bam.sh  setup.py
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: build-gui-branch.yml  build-gui.yml  ci.yml  release.yml
analysis/: README.md  run_reproducible_benchmark.sh
devv/: new.py
docs/: benchmarking.md  input-formats.md  output-formats.md  troubleshooting.md  usage.md
example/: G35894.var.snp.MNV.tsv  G35894.var.snp.MNV.vcf  G35894.var.snp.vcf  anot_genes.txt
example_withdeletion/: nuevo.MNV.tsv  nuevo.MNV.vcf  nuevo.vcf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: AnalysisRunner.tsx  BamViewer.tsx  FileSelector.tsx  ParameterForm.tsx  ResultsTable.tsx  Summary.tsx  VariantTable.tsx
get_mnv/: main.py  snpeff.py
main_scripts/: get_mnv-snpeff.py
scripts/: README.md  build_get_mnv.sh  build_gui_bundle.sh  dev.sh  reproduce_example_run.sh
src/: cli.rs  error.rs  genetic_code.rs  io.rs  lib.rs  main.rs  output.rs  pipeline.rs  read_count.rs  utils.rs  variants.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/io/: annotation.rs  fasta.rs  ivar.rs  mod.rs  tests.rs  validation.rs  vcf.rs  vcf_fast.rs
src/output/: common.rs  stats.rs  tsv.rs  vcf.rs
src/pipeline/: config.rs  manifest.rs  mod.rs  output_paths.rs  processing.rs  summary.rs
src/variants/: codon.rs  mod.rs  types.rs
tests/: integration.rs
