[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "get_mnv"
version = "1.1.2"
edition = "2021"
license = "AGPL-3.0-only"
default-run = "get_mnv"

[[bin]]
name = "get_mnv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
linear-map = "1.2.0"
noodles = { version = "0.109", features = ["bam", "bcf", "bgzf", "vcf", "csi", "tabix", "sam", "core"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
csv = "1.3.1"
lru = "0.16"
rayon = "1.8"
sha2 = "0.11.0"
