[package]
name = "get-mnv-gui"
version = "1.1.1"
description = "get_MNV GUI - Multi-Nucleotide Variant Analysis Desktop App"
authors = ["Paula Ruiz Rodriguez <paula.ruiz.rodriguez@csic.es>"]
edition = "2021"
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
noodles = { version = "0.109", features = ["bam", "bgzf", "sam", "core"] }

# Core library
get_mnv = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
